some more swagger
