# docs/swagger.json
@@ -206,17 +206,6 @@
                     "auth"
                 ],
                 "summary": "Refresh session",
-                "parameters": [
-                    {
-                        "description": "comment",
-                        "name": "recipe",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -274,17 +263,6 @@
                     "auth"
                 ],
                 "summary": "Signout",
-                "parameters": [
-                    {
-                        "description": "some",
-                        "name": "recipe",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
